--- a/.github/workflows/testing-framework.yaml
+++ b/.github/workflows/testing-framework.yaml
@@ -6,9 +6,11 @@ on:
   
   workflow_dispatch:
 
-  # pull_request: ## temporary for debugging development purposes
-  #   branches:
-  #     - main
+  pull_request: ## temporary for debugging development purposes
+    branches:
+      - main
+    paths:
+      - '.github/workflows/testing-framework.yaml'
 
 env:
   TF_VAR_aws_region: "eu-west-2"
