--- a/recipes/common/Makefile.common
+++ b/recipes/common/Makefile.common
@@ -39,6 +39,9 @@ CHROME_DOWNLOAD_PATH ?=
 OS := $(shell uname -s)
 ARCH := $(shell uname -m)
 
+ifeq ($(ARCH),x86_64)
+	ARCH := amd64
+
 ifeq ($(OS),Darwin) # This structure may vary if we upgrade chromedriver, see index: https://chromedriver.storage.googleapis.com/index.html
 	ifeq ($(ARCH),amd64)
 		CHROMEDRIVER_DOWNLOAD_PATH := chromedriver_mac64.zip
